# Whole-field-density-measurements-by-Digital-Image-Correlation

./: CMakeLists.txt  CalibrationValues.hpp  DIC.cpp  DIC.hpp  DisplayImage.cpp  DisplayImage.hpp  ExpectedUsage.md  ExperimentalSetupVariables.hpp  InputOut.cpp  InputOut.hpp  InputVariables.hpp  PointsWithValue.hpp  PositionDirection.hpp  README.md  SnellsLaw.cpp  SnellsLaw.hpp  calculateN.cpp  calculateN.hpp  coeff.c  coeff.h  csvload.cpp  csvload.hpp  interpol.c  interpol.h  nonlineariteration.cpp  nonlineariteration.hpp  pixeltranslation.cpp  pixeltranslation.hpp
Examples/Constant/: 1_Air_Averaged.tif  5_Air_Averaged.tif  CorrelationCoefficient.csv  Description.md  U0.csv  Ux.csv  Uxx.csv  Uxy.csv  Uy.csv  Uyy.csv  V0.csv  Vx.csv  Vxx.csv  Vxy.csv  Vy.csv  Vyy.csv  nfield.csv
Examples/Stratified/: 2_Water_Averaged.tif  6_Strat_Averaged.tif  8_Strat_Averaged.tif  CalibrationFigures.csv  CorrelationCoefficient.csv  Description.md  GridX.csv  GridY.csv  U0.csv  Ux.csv  Uxx.csv  Uxy.csv  Uy.csv  Uyy.csv  V0.csv  Vx.csv  Vxx.csv  Vxy.csv  Vy.csv  Vyy.csv  commandline.txt  nfield.csv
