SET(CMAKE_LEGACY_CYGWIN_WIN32 0)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
cmake_minimum_required (VERSION 2.8)
project (DIC)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable (DIC DisplayImage.cpp)
set (LIBSRC DisplayImage.hpp DIC.hpp DIC.cpp CalibrationValues.hpp PointsWithValue.hpp InputVariables.hpp ExperimentalSetupVariables.hpp 
PositionDirection.hpp pixeltranslation.hpp pixeltranslation.cpp SnellsLaw.hpp SnellsLaw.cpp nonlineariteration.hpp 
nonlineariteration.cpp calculateN.hpp calculateN.cpp InputOut.hpp InputOut.cpp csvload.hpp csvload.cpp coeff.h coeff.c interpol.h interpol.c)
add_library(coeff STATIC ${LIBSRC})
target_link_libraries( DIC coeff ${OpenCV_LIBS} )
set(CMAKE_CXX_FLAGS "-g2 -pg -O0 -Wall -Wextra -pedantic")
set(CMAKE_C_FLAGS "-g2 -pg -O0 -Wall -Wextra -pedantic")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -march=native -pg")
#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Ofast -march=native -pg")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -g2 -pg -O0")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -g2 -pg -O0")
